--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,11 @@
 refresh = 1
 
 [CURRENCIES]
-; Include as many as you'd like
+; Include as many as you'd like (GBTC can also be included as a 'currency')
 fx1 = USD
 fx2 = EUR
 fx3 = GBP
+fx4 = GBTC
 
 [ALERTS]
 sounds = on
@@ -14,23 +15,18 @@ specter_activity = off
 block_found = off
 
 [WIDGETS]
+tor_widget = on
 price_widget = on
-ssh_monitor = on
+login_monitor = on
 specter_widget = off
 mynode_widget = off
 umbrel_widget = off
 
 [SPECTER]
 enabled = off
-specter_url = http://127.0.0.1:25441
-specter_onion =
-refresh_time = 30
-specter_login = admin
-specter_password = specter_password
 
 [MYNODE]
 enabled = off
-mempool_widget = off
 
 [UMBREL]
 enabled = off
