Better display of fiat

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,13 @@
 refresh = 1
 
 [CURRENCIES]
-; Include as many as you'd like (GBTC can also be included as a 'currency')
-fx1 = USD
-fx2 = EUR
-fx3 = GBP
-fx4 = GBTC
+fx_list = ['USD','EUR','JPY','GBP','TRY','BRL']
+
+[GBTC]
+enabled = on
+; Update frequently from https://grayscale.co/bitcoin-trust/
+gbtc_shares = 0.00095127
+gbtc_shares_asof = 12-09-2020
 
 [ALERTS]
 sounds = on
@@ -30,3 +32,4 @@ enabled = off
 
 [UMBREL]
 enabled = off
+
