First working version is done

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [MAIN]
-refresh = 1
+; seconds before triggering new refresh
+refresh = 5
 
 [CURRENCIES]
 primary_fx = 'USD'
-fx_list = ['USD','EUR','JPY','GBP','TRY','BRL']
+fx_list = ['USD','EUR','JPY','GBP','TRY','BRL', 'AUD', 'CAD']
 
 [GBTC]
 enabled = on
@@ -21,16 +22,5 @@ block_found = off
 tor_widget = on
 price_widget = on
 login_monitor = on
-specter_widget = off
-mynode_widget = off
-umbrel_widget = off
 
-[SPECTER]
-enabled = off
-
-[MYNODE]
-enabled = off
-
-[UMBREL]
-enabled = off
 
