included mempool data

--- a/config.ini
+++ b/config.ini
@@ -22,5 +22,8 @@ block_found = off
 tor_widget = on
 price_widget = on
 login_monitor = on
+mempool_widget = on
 
+[MEMPOOL]
+url = http://mempool.space
 
