--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [MAIN]
 ; seconds before triggering new refresh
-refresh = 5
+refresh = 15
 
 [CURRENCIES]
 primary_fx = 'USD'
-fx_list = ['USD','EUR','JPY','GBP','TRY','BRL', 'AUD', 'CAD']
+fx_list = ['USD','EUR','JPY','GBP','TRY','BRL', 'AUD', 'CAD', 'NZD', 'ARS', 'ZAR', 'MXN']
 
-[GBTC]
-enabled = on
+[STOCKS]
+GBTC_enabled = on
 ; Update frequently from https://grayscale.co/bitcoin-trust/
 gbtc_shares = 0.00095127
 gbtc_shares_asof = 12-09-2020
