--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,10 @@ ssh_alert = on
 [MEMPOOL]
 ; Can be replaced by an onion address
 block_found_sound = on
-block_found_txt = 'New Block Found'
+block_found_txt = 'Tick Tock. Next Block'
 
 url = http://mempool.space
+
+[QUOTES]
+url = https://raw.githubusercontent.com/NakamotoInstitute/nakamotoinstitute.org/0bf08c48cd21655c76e8db06da39d16036a88594/data/quotes.json
 
