Fixed audio issues

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 ; seconds before triggering new refresh
 refresh = 15
 welcome_sound = on
+; The below will be read at startup
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 
 [CURRENCIES]
