Fixed user login issue for Debian

--- a/config.ini
+++ b/config.ini
@@ -21,10 +21,12 @@ ssh_alert = on
 [MEMPOOL]
 ; Can be replaced by an onion address
 block_found_sound = on
+; When a block is found, will announce:q
 block_found_txt = 'Tick Tock. Next Block'
 
 url = http://mempool.space
 
 [QUOTES]
+; List of Satoshi Quotes
 url = https://raw.githubusercontent.com/NakamotoInstitute/nakamotoinstitute.org/0bf08c48cd21655c76e8db06da39d16036a88594/data/quotes.json
 
