Included large text ticker

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,9 @@ refresh = 15
 welcome_sound = on
 ; The below will be read at startup
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
+; List of fonts for price ticker available here:
+; http://www.jave.de/figlet/fonts/overview.html
+large_text_font = big
 
 [CURRENCIES]
 primary_fx = 'USD'
