Fixed display of large price

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,8 @@ welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 ; List of fonts for price ticker available here:
 ; http://www.jave.de/figlet/fonts/overview.html
-large_text_font = big
+large_text_font = standard
+; fonts that work well here: standard, stacey, small, ogre, doom, epic
 
 [CURRENCIES]
 primary_fx = 'USD'
