Fixed issue with GBTC price - Alphavantage asking for captcha

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,17 @@
 [MAIN]
-; seconds before triggering new refresh
 refresh = 15
+sounds = on
 welcome_sound = on
-; The below will be read at startup
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
-; List of fonts for price ticker available here:
-; http://www.jave.de/figlet/fonts/overview.html
 large_text_font = standard
-; fonts that work well here: standard, stacey, small, ogre, doom, epic
+hide_private_info = True
 
 [CURRENCIES]
 primary_fx = 'USD'
 fx_list = ['USD','EUR', 'BRL', 'GBP', 'CAD']
 
 [STOCKS]
-GBTC_enabled = on
-; Update frequently from https://grayscale.co/bitcoin-trust/
+gbtc_enabled = on
 gbtc_shares = 0.00095127
 gbtc_shares_asof = 12-09-2020
 
@@ -23,14 +19,10 @@ gbtc_shares_asof = 12-09-2020
 ssh_alert = on
 
 [MEMPOOL]
-; Can be replaced by an onion address
 block_found_sound = on
-; When a block is found, will announce:q
 block_found_txt = 'Tick Tock. Next Block'
-
 url = http://mempool.space
 
 [QUOTES]
-; List of Satoshi Quotes
 url = https://raw.githubusercontent.com/NakamotoInstitute/nakamotoinstitute.org/0bf08c48cd21655c76e8db06da39d16036a88594/data/quotes.json
 
