--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,8 @@ sounds = on
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = True
+hide_private_info = False
+sound = False
 
 [CURRENCIES]
 primary_fx = 'USD'
