Fixed some stability issues

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ sounds = on
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = False
+hide_private_info = True
 sound = False
 
 [CURRENCIES]
