Fixed an issue with Cryptocompare API call limits

--- a/config.ini
+++ b/config.ini
@@ -27,3 +27,7 @@ url = http://mempool.space
 [QUOTES]
 url = https://raw.githubusercontent.com/NakamotoInstitute/nakamotoinstitute.org/0bf08c48cd21655c76e8db06da39d16036a88594/data/quotes.json
 
+[API]
+cryptocompare = b'5e2e1ec0c884122d0ac144f4192e2cc0'
+random = False
+
