Included shortcut to download the Bitcoin Whitepaper

--- a/config.ini
+++ b/config.ini
@@ -29,5 +29,5 @@ url = https://raw.githubusercontent.com/NakamotoInstitute/nakamotoinstitute.org/
 
 [API]
 cryptocompare = get_api_key
-random = False
+random = True
 
