Auto checks small screens and cycles widgets

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,8 @@ welcome_text = â€œGood evening, Dave. Everything is running smoothly. And you?â€
 large_text_font = standard
 hide_private_info = True
 sound = False
+; Seconds between windows scrolls on small displays
+auto_scroll = 10
 
 [CURRENCIES]
 ; dirty fiat list goes here
