Included option to stop auto scroll

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ welcome_text = â€œGood evening, Dave. Everything is running smoothly. And you?â€
 large_text_font = standard
 hide_private_info = True
 sound = False
-auto_scroll = 10
+auto_scroll = False
 
 [CURRENCIES]
 primary_fx = 'USD'
