Implemented cache to file for better performance

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [MAIN]
-refresh = 15
+refresh = 5
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
 hide_private_info = True
 sound = False
-auto_scroll = True
+auto_scroll = False
 
 [CURRENCIES]
 primary_fx = 'USD'
