--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,8 @@ large_text_font = standard
 hide_private_info = True
 sound = False
 auto_scroll = False
+message_widget = "Running Bitcoin"
+
 
 [CURRENCIES]
 primary_fx = 'USD'
