Included dockerfile and instructions on how to build and run docker container

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ large_text_font = standard
 hide_private_info = True
 sound = False
 auto_scroll = False
-message_widget = "Running Bitcoin"
+message_widget = Running Bitcoin
 
 
 [CURRENCIES]
