Included an auto check for Bitcoin RPC at launch

--- a/config.ini
+++ b/config.ini
@@ -35,3 +35,9 @@ random = True
 [UMBREL]
 url = http://umbrel.local/
 
+[BITCOIN_RPC]
+user = None
+password = None
+ip_address = None
+port = None
+
