--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [MAIN]
 refresh = 5
+price_refresh_inteval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
