Included time since last block on lg block txt

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 [MAIN]
 refresh = 5
-price_refresh_inteval = 15
+price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
 hide_private_info = True
 sound = False
-auto_scroll = True
+auto_scroll = False
 message_widget = Running Bitcoin
 
 [CURRENCIES]
