--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ welcome_text = â€œGood evening, Dave. Everything is running smoothly. And you?â€
 large_text_font = standard
 hide_private_info = True
 sound = False
-auto_scroll = True
+auto_scroll = False
 message_widget = Running Bitcoin
 
 [CURRENCIES]
