--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,7 @@ hide_private_info = True
 sound = False
 auto_scroll = True
 message_widget = Running Bitcoin
+tty = /dev/tty
 
 [CURRENCIES]
 primary_fx = 'USD'
