--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,7 @@ sound = False
 auto_scroll = True
 message_widget = Running Bitcoin
 tty = /dev/tty
+output_to_monitor = True
 
 [CURRENCIES]
 primary_fx = 'USD'
