--- a/config.ini
+++ b/config.ini
@@ -17,8 +17,8 @@ fx_list = ['USD','EUR', 'GBP', 'CAD']
 
 [STOCKS]
 gbtc_enabled = on
-gbtc_shares = 0.000941003
-gbtc_shares_asof = 06-28-2021
+gbtc_shares = 0.000939303
+gbtc_shares_asof = 07-29-2021
 
 [ALERTS]
 ssh_alert = on
@@ -39,4 +39,9 @@ user = None
 password = None
 ip_address = None
 port = None
+
+[SPECTER]
+specter_url = http://umbrel.local:25441/
+specter_login = None
+specter_password = None
 
