Specter Server connected and tested

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = True
+hide_private_info = False
 sound = False
 auto_scroll = False
 message_widget = Running Bitcoin
@@ -41,7 +41,8 @@ ip_address = None
 port = None
 
 [SPECTER]
-specter_url = http://umbrel.local:25441/
+specter_url = None
 specter_login = None
 specter_password = None
+specter_port = 25441
 
