Portfolio Feature + Fixes

--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,15 @@ price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = False
+hide_private_info = True
 sound = False
 auto_scroll = False
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
+
+[PORTFOLIO]
+position_btc = 0.002
 
 [CURRENCIES]
 primary_fx = 'USD'
