--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,9 @@ price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = True
+hide_private_info = False
 sound = False
-auto_scroll = True
+auto_scroll = False
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
