--- a/config.ini
+++ b/config.ini
@@ -4,15 +4,15 @@ price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
 large_text_font = standard
-hide_private_info = False
+hide_private_info = True
 sound = False
-auto_scroll = False
+auto_scroll = True
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
 
 [PORTFOLIO]
-position_btc = 0.002
+position_btc = 0.00
 
 [CURRENCIES]
 primary_fx = 'USD'
@@ -49,3 +49,5 @@ specter_login = None
 specter_password = None
 specter_port = 25441
 
+[MYNODE]
+url = http://mynode.local/
