Improvement for XS screens

--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,10 @@ refresh = 5
 price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
-large_text_font = standard
+large_text_font = small
 hide_private_info = True
 sound = False
-auto_scroll = False
+auto_scroll = True
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
