--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ refresh = 5
 price_refresh_interval = 15
 welcome_sound = on
 welcome_text = “Good evening, Dave. Everything is running smoothly. And you?”
-large_text_font = small
+large_text_font = standard
 hide_private_info = True
 sound = False
 auto_scroll = True
