New RPC Explorer connection

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ welcome_text = â€œGood evening, Dave. Everything is running smoothly. And you?â€
 large_text_font = standard
 hide_private_info = False
 sound = False
-auto_scroll = True
+auto_scroll = False
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
