--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,7 @@ message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
 node_url = umbrel.local
+auto_upgrade = True
 
 [PORTFOLIO]
 position_btc = 0.00
