Webserver minimal implementation is running

--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,12 @@ output_to_monitor = True
 node_url = umbrel.local
 auto_upgrade = True
 
+[SERVER]
+host = 0.0.0.0
+port = 5000
+onion_server = True
+onion_port = 80
+
 [PORTFOLIO]
 position_btc = 0.00
 
