--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,14 @@ packaging==20.8
 psutil
 apscheduler
 python-bitcoinrpc
-beautifulsoup4
-numpy
+beautifulsoup4==4.9.3
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+pandas==1.1.5
+numpy==1.19.4
+simplejson==3.17.2
+Flask-WTF==0.14.3
+Flask-SQLAlchemy==2.4.4
+SQLAlchemy-Utils==0.36.8
+SQLAlchemy==1.3.20
