Fixed an issue on loading web server:

--- a/config.ini
+++ b/config.ini
@@ -6,18 +6,12 @@ welcome_text = â€œGood evening, Dave. Everything is running smoothly. And you?â€
 large_text_font = standard
 hide_private_info = True
 sound = False
-auto_scroll = True
+auto_scroll = False
 message_widget = Running Bitcoin
 tty = /dev/tty
 output_to_monitor = True
 node_url = umbrel.local
 auto_upgrade = True
-
-[SERVER]
-host = 0.0.0.0
-port = 5000
-onion_server = True
-onion_port = 80
 
 [PORTFOLIO]
 position_btc = 0.00
@@ -59,4 +53,10 @@ specter_port = 25441
 
 [MYNODE]
 url = http://mynode.local/
+
+[SERVER]
+host = 0.0.0.0
+port = 5000
+onion_server = True
+onion_port = 80
 
